🐳 chore: rem. template files

--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html {
+    @apply text-base;
+  }
+
+  body {
+    @apply text-body;
+  }
+}
+
+@layer utilities {
+  .btn-mark-read {
+    @apply text-body;
+  }
+}
